# ThisChord

./: .env  .gitignore  Cargo.toml  README.md
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: db.rs  main.rs  message.rs  server_messages.rs  socket.rs
static/: auth.html  auth.js  chat.js  index.html  styles.css  themes.js  ws.js
static/frontend/: animations.js  auth.js  interactions.js  local.js  main.js  viewport.js
static/frontend/assets/: styles.css
