[package]
name = "rust_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
rusqlite = { version = "0.31" }
warp = "0.3.7"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
